# flexnotes

./: .dockerignore  .env  .env.example  .gitignore  Cargo.toml  Dockerfile.backend  Insomnia HTTP methods.json  docker-compose.yaml  insomnia.json  readme.md
src/: database.rs  error.rs  logger.rs  logging.rs  main.rs
src/auth/: mod.rs
src/logger/: mod.rs
src/models/: mod.rs  note.rs  todo.rs  user.rs
src/repository/: mod.rs  note_repo.rs  todo_repo.rs  user_repo.rs
src/routes/: auth.rs  mod.rs  notes.rs  todos.rs  token_check.rs
src/services/: mod.rs  note_service.rs  todo_service.rs  user_service.rs
