[package]
name = "flexnotes"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
axum-debug = "0.3.3"
axum-extra = { version = "0.10.0", features = ["typed-header"] }
bcrypt = "0.17.0"
dotenv = "0.15.0"
futures = "0.3.31"
jsonwebtoken = "9.3.0"
mongodb = "3.2.1"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
sled = "0.34.7"
tokio = { version = "1.43.0", features = ["full"] }
tower-http = { version = "0.6.2", features = ["cors"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["tracing"] }
