[package]
name = "flexnotes"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.88"
axum = "0.8.1"
axum-debug = "0.3.3"
axum-extra = { version = "0.10.0", features = ["typed-header"] }
bcrypt = "0.17.0"
bson = { version = "2.15.0", features = ["chrono-0_4"] }
chrono = { version = "0.4.41", features = ["serde"] }
dotenv = "0.15.0"
futures = "0.3.31"
jsonwebtoken = "9.3.0"
mongodb = "3.2.1"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
sled = "0.34.7"
thiserror = "2.0.12"
tokio = { version = "1.43.0", features = ["full"] }
tower-http = { version = "0.6.2", features = ["cors"] }
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "tracing"] }
